--- a/package.json
+++ b/package.json
@@ -13,15 +13,20 @@
   },
   "dependencies": {
     "@next/bundle-analyzer": "14.0.4",
+    "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.10",
     "autoprefixer": "^10.4.16",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "cmdk": "^0.2.0",
     "contentlayer": "0.3.4",
     "esbuild": "0.19.10",
     "github-slugger": "^1.4.0",
     "gray-matter": "^4.0.3",
     "image-size": "1.0.2",
+    "lucide-react": "^0.303.0",
     "next": "14.0.4",
     "next-contentlayer": "0.3.4",
     "next-themes": "^0.2.1",
@@ -40,8 +45,10 @@
     "remark": "^14.0.2",
     "remark-gfm": "^3.0.1",
     "remark-math": "^5.1.1",
+    "tailwind-merge": "^2.2.0",
     "tailwindcss": "^3.4.0",
-    "unist-util-visit": "^4.1.0"
+    "unist-util-visit": "^4.1.0",
+    "vaul": "^0.8.0"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
