--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "gray-matter": "^4.0.3",
     "image-size": "1.0.2",
     "lucide-react": "^0.303.0",
-    "next": "14.0.4",
+    "next": "^14.0.4",
     "next-contentlayer": "0.3.4",
     "next-themes": "^0.2.1",
     "pliny": "0.1.6",
