--- a/package.json
+++ b/package.json
@@ -12,21 +12,26 @@
     "type-check": "tsc --pretty --noEmit"
   },
   "dependencies": {
-    "@next/bundle-analyzer": "14.0.4",
+    "@next/bundle-analyzer": "14.1.0",
+    "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.10",
-    "autoprefixer": "^10.4.16",
-    "clsx": "^2.0.0",
+    "autoprefixer": "^10.4.17",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "cmdk": "^0.2.1",
     "contentlayer": "0.3.4",
-    "esbuild": "0.19.10",
+    "esbuild": "0.20.0",
     "github-slugger": "^1.4.0",
     "gray-matter": "^4.0.3",
-    "image-size": "1.0.2",
-    "next": "14.0.4",
+    "image-size": "1.1.1",
+    "lucide-react": "^0.320.0",
+    "next": "^14.1.0",
     "next-contentlayer": "0.3.4",
     "next-themes": "^0.2.1",
-    "pliny": "0.1.6",
-    "postcss": "^8.4.32",
+    "pliny": "0.1.7",
+    "postcss": "^8.4.33",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-simple-typewriter": "^5.0.1",
@@ -40,24 +45,26 @@
     "remark": "^14.0.2",
     "remark-gfm": "^3.0.1",
     "remark-math": "^5.1.1",
-    "tailwindcss": "^3.4.0",
-    "unist-util-visit": "^4.1.0"
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss": "^3.4.1",
+    "unist-util-visit": "^4.1.0",
+    "vaul": "^0.8.9"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
-    "@types/mdx": "^2.0.10",
-    "@types/react": "^18.2.45",
-    "@typescript-eslint/eslint-plugin": "^6.15.0",
-    "@typescript-eslint/parser": "^6.15.0",
+    "@types/mdx": "^2.0.11",
+    "@types/react": "^18.2.48",
+    "@typescript-eslint/eslint-plugin": "^6.20.0",
+    "@typescript-eslint/parser": "^6.20.0",
     "cross-env": "^7.0.3",
     "eslint": "^8.56.0",
-    "eslint-config-next": "14.0.4",
+    "eslint-config-next": "14.1.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.2",
-    "husky": "^8.0.3",
-    "lint-staged": "^15.2.0",
-    "prettier": "^3.1.1",
-    "prettier-plugin-tailwindcss": "^0.5.9",
+    "eslint-plugin-prettier": "^5.1.3",
+    "husky": "^9.0.7",
+    "lint-staged": "^15.2.1",
+    "prettier": "^3.2.4",
+    "prettier-plugin-tailwindcss": "^0.5.11",
     "typescript": "^5.3.3"
   },
   "resolutions": {
